core.main: Refactor repositories, split path resolution into separate module, change core conflict resolution to use overrides, fix project dtd and test, replace overrides with path based overrides